tests/parser/tests/cases/should_fail/char_literals/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:6
1 |   k := 'av';
  |        ^^^^ here
  = note: invalid character literal `av`, character literals may only contain one codepoint
